--- a/styles.css
+++ b/styles.css
@@ -1,129 +1,245 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+body,
+html {
+    height: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
-.container{
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(0deg, #08aeea 0%, #2af598 100%);
 }
-.container-title{
+.container-title {
     margin-bottom: 20px;
 }
-.title{
+.title {
     color: white;
     font-weight: bold;
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
 }
-.input{
+.container-input{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.input {
     width: 300px;
     height: 30px;
     padding: 3px 3px 3px 5px;
     outline: none;
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(255, 255, 255, 0.2);
     border: solid 1px white;
     border-radius: 4px;
     color: white;
 }
-::placeholder{
+::placeholder {
     color: white;
 }
-.button-add{
+.button-add {
     cursor: pointer;
     margin-left: 10px;
     width: 60px;
     height: 30px;
     border-radius: 10px;
-    border:solid 1px white;
+    border: solid 1px white;
     outline: none;
-    background-color: rgba(255,255,255,0.2);
-    color:white
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
 }
-.button-add:hover{
-    background-color: rgba(255,255,150,0.5);
-    color:white;
+.button-add:hover {
+    background-color: rgba(255, 255, 150, 0.5);
+    color: white;
     font-weight: bold;
 }
-.button-delete{
+.button-delete {
     cursor: pointer;
     margin-left: 20px;
     width: 60px;
     height: 30px;
     border-radius: 10px;
-    border:solid 1px white;
+    border: solid 1px white;
     outline: none;
-    background-color: rgba(255,255,255,0.2);
-    color:white
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
 }
-.button-delete:hover{
-    background-color: rgba(255,255,150,0.5);
-    color:white;
+.button-delete:hover {
+    background-color: rgba(255, 255, 150, 0.5);
+    color: white;
     font-weight: bold;
 }
-.container-table{
+.container-table {
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 500px;
+    height: 300px;
     margin-top: 40px;
     text-align: center;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
-.modal-container{
+.container-table::-webkit-scrollbar {
+    width: 8px; /* Tamaño del scroll en vertical */
+    height: 8px; /* Tamaño del scroll en horizontal */
+    display: block; /* Ocultar scroll */
+}
+
+/* Ponemos un color de fondo y redondeamos las esquinas del thumb */
+.container-table::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(0deg, #087ba5 0%, #0c864f 100%);
+    border-radius: 4px;
+}
+
+/* Cambiamos el fondo y agregamos una sombra cuando esté en hover */
+.container-table::-webkit-scrollbar-thumb:hover {
+    background-image: linear-gradient(0deg, #055674 0%, #115a39 100%);
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+/* Cambiamos el fondo cuando esté en active */
+.container-table::-webkit-scrollbar-thumb:active {
+    background-color: #999999;
+}
+
+.container-table::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 4px;
+}
+
+/* Cambiamos el fondo cuando esté en active o hover */
+.container-table::-webkit-scrollbar-track:hover,
+.container-table::-webkit-scrollbar-track:active {
+    background: #f1f0f0;
+}
+.modal-container {
     display: flex;
     justify-content: center;
-    display:none;
+    display: none;
     position: absolute;
     border-radius: 20px;
     background-color: white;
     width: 300px;
     height: 100px;
     padding: 20px;
-    color:black;
+    color: black;
     font-weight: bold;
     letter-spacing: 1px;
 }
-.modal-content{
+.modal-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.modal-delete-button-ok{
+.modal-delete-button-ok {
     cursor: pointer;
     width: 80px;
-    background-image: linear-gradient(0deg, #08AEEA 0%, #16975d 100%);
+    background-image: linear-gradient(0deg, #08aeea 0%, #16975d 100%);
     border: solid 1px black;
     border-radius: 4px;
     color: white;
     font-weight: bold;
-    padding:4px;
+    padding: 4px;
 }
-.modal-delete-button-cancel{
+.modal-delete-button-cancel {
     cursor: pointer;
     width: 80px;
-    background-image: linear-gradient(0deg, #08AEEA 0%, #16975d 100%);
+    background-image: linear-gradient(0deg, #08aeea 0%, #16975d 100%);
     border: solid 1px black;
     border-radius: 4px;
     color: white;
     font-weight: bold;
-    padding:4px;
+    padding: 4px;
 }
-.ok-cancel{
+.ok-cancel {
     width: 100%;
     margin-top: 10px;
     display: flex;
     justify-content: space-around;
 }
-.checkbox{
+.checkbox {
     width: 20px;
     height: 20px;
     margin-right: 20px;
+}
+table {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+tr {
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 450px;
+}
+td {
+    width: 150px;
+}
+@media (max-width: 500px) {
+    .input {
+        margin-left: 10px;
+        margin-right: 10px;
+        width: 80%;
+        height: 30px;
+        padding: 3px 3px 3px 5px;
+        outline: none;
+        background-color: rgba(255, 255, 255, 0.2);
+        border: solid 1px white;
+        border-radius: 4px;
+        color: white;
+    }
+    .button-add {
+        margin-right: 10px;
+        cursor: pointer;
+        margin-left: 10px;
+        width: 20%;
+        height: 30px;
+        border-radius: 10px;
+        border: solid 1px white;
+        outline: none;
+        background-color: rgba(255, 255, 255, 0.2);
+        color: white;
+    }
+    .container-table {
+        display: flex;
+        justify-content: center;
+        width: 300px;
+        height: 300px;
+        margin-top: 40px;
+        text-align: center;
+        overflow-y: auto;
+    }
+    table {
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+    }
+    tr {
+        margin: 10px;
+        width: 300px;
+    }
+    td {
+        display: flex;
+        flex-wrap: wrap;
+        width: 125px;
+    }
+    .checkbox {
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+    }
+    .td-checkbox{
+        width: 50px!important;
+    }
 }
